app/css/main.css
@font-face {
    font-family: 'SansationRegular';
    src: url('../font/sansation_regular-webfont.eot');
    src: url('../font/sansation_regular-webfont.eot?#iefix') format('embedded-opentype'),
        url('../font/sansation_regular-webfont.woff') format('woff'),
        url('../font/sansation_regular-webfont.ttf') format('truetype'),
        url('../font/sansation_regular-webfont.svg#SansationRegular') format('svg');
    font-weight: normal;
    font-style: normal;
    -webkit-font-smoothing: antialiased;
}

@font-face {
    font-family: 'HandyHandyRegular';
    src: url('../font/handyhandy-webfont.eot');
    src: url('../font/handyhandy-webfont.eot?#iefix') format('embedded-opentype'),
    url('../font/handyhandy-webfont.woff2') format('woff2'),
    url('../font/handyhandy-webfont.woff') format('woff'),
    url('../font/handyhandy-webfont.ttf') format('truetype'),
    url('../font/handyhandy-webfont.svg#handyhandyregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

*, *:before, *:after {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

body {
    background-color: #f9f9f9;
    font-family: 'SansationRegular', sans-serif;
    margin: 0;
    overflow-x: hidden;
    overflow-y: scroll;
    padding: 0;
}

a {
    text-decoration: none;
}

button.icon {
    background: none;
    border: none;
    cursor: pointer;
    display: block;
    font-size: 1.5rem;
    margin: 0;
    outline: none;
    padding: 0;
}

button.icon:hover {
    color: #515151;
}

button.icon:active {
    color: #0c7b10;
}

button.upload::before {
    content: '\5e';
    display: inline-block;
    font-family: "wallblog";
    font-style: normal;
    font-weight: normal;
    margin-right: .2em;
    text-align: center;
    width: 1em;
}

body > header {
    perspective: 99999px;
    perspective-origin: top;
    position: fixed;
    width: 100%;
    z-index: 2;
}

nav {
    background-color: #fbfbfb;
    box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, .3);
    height: 100vh;
    left: -15rem;
    min-width: 10rem;
    max-width: 14rem;
    padding: 0 0.5rem;
    position: fixed;
    top: 2.2rem;
    transition: transform 0.25s ease;
    z-index: 2;
}

nav.displayed {
    transform: translateX(15rem);
}

aside {
    background: url(../img/timeline.png) repeat-y;
    bottom: 0;
    min-height: 100vh;
    position: absolute;
    right: 0;
    top: 35px;
    width: 22px;
}

aside > .marker {
    background-color: #000;
    display: block;
    color: #e4e4e4;
    font-family: monospace;
    left: 0;
    padding: 4px;
    position: absolute;
    white-space: pre-wrap;
    width: 15px;
    word-wrap: break-word;
    z-index: 1;
}

.headbar {
    box-shadow: 0 1px 8px rgba(0, 0, 0, .3);
    height: 2.2rem;
    margin-bottom: 0.3rem;
    perspective: 99999px;
    perspective-origin: top;
    transform-style: preserve-3d;
    transition: transform 0.6s ease-in-out;
}
.headbar.login {
    transform: rotateX(-90deg);
}

.headbar .side {
    align-items: center;
    backface-visibility:hidden;
    background-color: #fbfbfb;
    display: flex;
    position: absolute;
    height: 100%;
    width: 100%;
}

.headbar .front {
    justify-content: space-between;
    transform: translateZ(1.1rem);
}

.headbar.zoom .front {
    justify-content: flex-start;
}

.headbar .back {
    background-color: #03160a;
    color: #ffffff;
    justify-content: center;
    transform: rotateX(90deg) translateZ(1.1rem);
}

.headbar .menu {
    display: none;
    font-size: 1.5rem;
}
.headbar .menu.active {
    color: #83C22A;
}

.headbar .brand {
    color: #03160a;
    display: flex;
    font-family: 'HandyHandyRegular';
    font-size: 1.8rem;
    height: 35px;
    line-height: 36px;
    margin: 0;
    padding: 0 5px;
}

.headbar .delete {
    cursor: pointer;
    line-height: 36px;
    position: absolute;
    right: 1rem;
}

.headbar .info {
    line-height: 36px;
    margin: 0;
    padding-right: 1rem;
}

.headbar .date, .headbar .description {
    font-size: large;
    line-height: 36px;
    margin: 0;
}

.headbar .date.short {
    display: none;
}

.headbar .description {
    font-weight: bold;
}

.headbar input[name='description'] {
    margin-top: 4px;
    margin-left: 0.5rem;
    width: 20rem;
}

.headbar .extra {
    display: flex;
    flex-direction: row;
}

.headbar .btn {
    height: 1.5rem;
    line-height: 1.5rem;
}

.btn {
    background-color: #9e9e9e;
    border: none;
    border-radius: 5px;
    color: #fff;
    cursor: pointer;
    font-size: 1rem;
    height: 2rem;
    line-height: 2rem;
    margin: 0 .5rem;
    outline: 0;
    padding: 0 1rem;
    text-align: center;
}

.btn.primary {
    background-color: #3189c1;
}

main {
    padding-top: 2.4rem;
}

.grid {
    display: flex;
    padding-right: 22px;
    width: 100%;
}

.grid.line {
    flex-wrap: wrap;
    justify-content: space-around;
    margin: 0;
}

.item {
    margin-top: 0.3rem;
    position: relative;
}

.column .item {
    margin-top: 1%;
}

.column {
    padding-left: 0.6rem;
    width: 100%;
}

.column:last-child {
    padding-right: 0.6rem;
}

.item video, .item iframe, .item img {
    cursor: pointer;
    position: relative;
}

.column .item video, .column .item iframe, .column .item img {
    width: 100%;
}

.item img, .item video, .item iframe, .picture img, .picture iframe {
    -moz-box-shadow: 1px 1px 5px #999;
    -webkit-box-shadow: 1px 1px 5px #999;
    box-shadow: 1px 1px 5px #999;
}

.item img:hover, .item video:hover, .item iframe:hover {
    -moz-box-shadow: 2px 2px 6px #FFFFBC;
    -webkit-box-shadow: 2px 2px 6px #FFFFBC;
    box-shadow: 2px 2px 6px #FFFFBC;
}

.item .date, .item .description, .item .nb-comments {
    background: rgba(0, 0, 0, 0.5);
    color: #ffffff;
    font-size: large;
    margin: 0;
    padding: 4px 0;
    position: absolute;
    text-align: center;
    visibility: hidden;
    width: 100%;
}

.item:hover .date, .item:hover .description, .item:hover .nb-comments {
    visibility: visible;
}

.item .description {
    bottom: 4px;
    line-height: 1.5rem;
}
.item .date {
    font-size: medium;
    padding: 4px 5px;
    text-align: center;
    left: 0;
    top: 0;
    width: auto;
}

.item .nb-comments {
    bottom: auto;
    font-size: medium;
    padding: 4px 0 4px 5px;
    right: 0;
    top: 0;
    width: auto;
}

.zoom {
    display: flex;
}

.picture {
    cursor: pointer;
    text-align: center;
    width: 80%;
}

.controls {
    text-align: left;
}

.help-inline {
    float: left;
    clear: both;
}

.videos .upload-video {
    margin: 0px 0 25px 0;
    text-align: center;
}
.upload-video input {
    width: 95%;
}

.modal form {
    display: flex;
    flex-wrap: wrap;
    height: 100%;
}
.modal .upload-image {
    margin: 10px;
    text-align: center;
    width: 260px;
}
.modal .upload-image input {
    width: 100%;
}
.modal .upload-image img {
    max-height: 240px;
    max-width: 240px;
    margin: auto;
}
.modal .upload-image-zone {
    border: 2px dashed lightgray;
    display: flex;
    height: 260px;
    line-height: 260px;
    margin-bottom: 10px;
    width: 260px;
}

form {
    text-align: center;
}

form.horizontal {
    display: flex;
    flex-direction: row;
}

form .form-field {
    align-items: center;
    display: flex;
    flex-direction: row;
    line-height: 1rem;
    margin-right: 1rem;
    padding: 0.3rem;
}

form .form-field-label {
    margin-right: 1rem;
}

input[type='text'], input[type='email'], input[type='password'], input[type='url'], input[type='date'] {
    background-color: #fff;
    border: 1px solid #ccc;
    border-radius: 3px;
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    color: #555;
    font-size: 14px;
    height: 20px;
    padding: 0.8rem 0.5rem;
    -webkit-transition: border linear .2s,box-shadow linear .2s;
    -moz-transition: border linear .2s,box-shadow linear .2s;
    transition: border linear .2s,box-shadow linear .2s;
}

textarea {
    border: 1px solid #ccc;
    border-radius: 3px;
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    color: #555;
    font-size: 14px;
    padding: 0.5rem;
}


form.pictures {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.fade {
    opacity: 0;
    -webkit-transition: opacity 0.25s linear;
    -moz-transition: opacity 0.25s linear;
    -o-transition: opacity 0.25s linear;
    transition: opacity 0.25s linear;
}

.filter {
    background-color: #5d5d5d;
    border-radius: 5px;
    color: #ffffff;
    cursor: pointer;
    font-style: italic;
    height: 28px;
    line-height: 28px;
    padding: 0 1rem;
    text-align: center;
    z-index: 10;
}

.filter.expanded {
    align-items: center;
    display: flex;
    flex-direction: column;
    height: auto;
    justify-content: space-around;
    left: 0;
    margin: 0 45%;
    min-width: 14rem;
    padding: 0.5rem;
    position: absolute;
    top: 0;
    width: auto;
}

.filter .icon-clear {
    font-size: 1.2rem;
    left: 10px;
    position: relative;
    top: 1px;
}

.filter-selection {
    display: flex;
    flex-direction: column;
}

.filter-group {
    cursor: default;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    padding-bottom: 1rem;
    padding-left: 0;
    width: 100%;
}

.filter-group .year, .filter-group .month {
    background-color: #ffffff;
    border-radius: 5px;
    color: #000000;
    cursor: pointer;
    font-style: normal;
    margin: 0.2rem 0.1rem;
    padding: 0 5px;
    text-align: center;
    width: 4rem;
}

.filter-group .month {
    width: 6rem;
}

.filter-group .year.selected, .filter-group .month.selected {
    background-color: #83C22A;
    color: #fff;
}

nav .filter-group .year, nav .filter-group .month {
    background-color: #a5a5a5;
    color: #f3f3f3;
    padding: 0.2rem 0.4rem;
}

.filter-selection-button {
    width: 120px;
}

.filter-menu, .filter-content {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.filter-menu h3 {
    align-self: flex-start;
}

.hidden {
    display: none !important;
}

.click-overlay {
    background-color: transparent;
    display: block;
    position: absolute;
    z-index: 500;
}

@media (max-width: 1024px) {
    .headbar .brand {
        font-size: 1.7rem;
    }

    .headbar .info, .headbar .date, .headbar .description {
        font-size: 1.2rem;
    }

    .headbar.login .form-field {
        margin-right: 0.5rem;
    }

    .filter {
        font-size: 1.1rem;
    }
}

@media (max-width: 760px) {
    .headbar {
        transition: none;
    }

    .headbar .brand {
        font-size: 1.5rem;
    }

    .headbar .info {
        display: none;
    }

    .headbar .date.short, .headbar .description {
        font-size: 0.9rem;
    }

    .headbar .date {
        display: none;
    }

    .headbar .date.short {
        display: block;
    }

    .headbar.login {
        height: 6.6rem;
    }

    .headbar.login form.horizontal {
        flex-wrap: wrap;
    }

    .headbar.login .form-field {
        width: 100%;
    }
    .headbar.login .form-field:last-child {
        justify-content: center;
    }

    .headbar.login label {
        flex-shrink: 0;
        text-align: right;
        width: 8rem;
    }

    .headbar.login input {
        flex-grow: 1;
    }

    .zoom {
        flex-wrap: wrap;
    }

    .zoom .picture {
        width: 100%;
    }
}

@media (max-width: 620px) {
    .headbar .filter {
        display: none;
    }

    .headbar .menu {
        display: block;
    }

    .headbar .brand {
        font-size: 1.3rem;
    }

    .headbar .brand img {
        display: none;
    }

    .headbar .delete {
        float: left;
        margin-left: 10px;
    }

    aside {
        display: none;
    }

    .grid {
        margin-right: 0;
    }

    .picture {
        width: 98%;
    }
}

